--- a/index.html
+++ b/index.html
@@ -4,251 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OSINT Search Tool</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 2rem;
-      background-color: #f7f9fc;
-      color: #333;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 2rem;
-      font-size: 2rem;
-    }
-
-    .section {
-      margin-bottom: 2rem;
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-
-    label, input, select, button, textarea {
-      font-size: 1rem;
-    }
-
-    input[type="text"], textarea, select {
-      width: 100%;
-      padding: 0.6rem;
-      margin-top: 0.5rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-
-    button {
-      padding: 0.6rem 1.2rem;
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #2563eb;
-    }
-
-    summary {
-      font-weight: bold;
-      cursor: pointer;
-      margin-bottom: 0.5rem;
-    }
-
-    ul {
-      padding-left: 1rem;
-      list-style: none;
-    }
-
-    .dropdown-section {
-      margin-top: 0.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .site-link {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .site-link a {
-      color: #2563eb;
-      text-decoration: none;
-    }
-
-    .site-link a:hover {
-      text-decoration: underline;
-    }
-
-    .inline-buttons {
-      display: flex;
-      gap: 0.5rem;
-    }
-
-    .small-button {
-      padding: 0.3rem 0.6rem;
-      font-size: 0.85rem;
-      background: #e5e7eb;
-      color: #333;
-    }
-
-    .small-button:hover {
-      background: #d1d5db;
-    }
-
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="container">
+    <h1>OSINT Search Tool</h1>
 
-  <h1>OSINT Search Tool</h1>
+    <div class="section">
+      <label for="keyword">Enter Keyword:</label>
+      <input type="text" id="keyword" placeholder="e.g. John Smith" />
+    </div>
 
-  <div class="section">
-    <label for="keyword">🔍 Enter Keyword:</label>
-    <input type="text" id="keyword" placeholder="e.g. John Smith, Acme Ltd" />
-    <button onclick="search()">Search</button>
+    <div class="section">
+      <h2>Search Categories</h2>
+      <div id="categoryList" class="category-list"></div>
+    </div>
+
+    <div class="section">
+      <button id="searchBtn" class="brand-button">Search</button>
+    </div>
+
+    <div class="section">
+      <h2>Manage Categories & Websites</h2>
+      <div id="managePanel"></div>
+      <button id="addCategoryBtn" class="brand-button">+ Add Category</button>
+      <button id="addWebsiteBtn" class="brand-button">+ Add Website</button>
+    </div>
+
+    <div class="section">
+      <h2>Upload Image for Reverse Image Search</h2>
+      <input type="file" id="imageUpload" accept="image/*" />
+      <button id="reverseSearchBtn" class="brand-button">Reverse Image Search</button>
+    </div>
+
+    <div class="section">
+      <h2>Search Results</h2>
+      <div id="results"></div>
+    </div>
   </div>
 
-  <div class="section">
-    <h2>🔧 Manage Categories & Websites</h2>
-
-    <label for="categoryName">Add New Category:</label>
-    <input type="text" id="categoryName" placeholder="e.g. Social Media" />
-    <button onclick="addCategory()">Add Category</button>
-
-    <label for="websiteName">Add New Website:</label>
-    <input type="text" id="websiteName" placeholder="Website URL" />
-    <select id="websiteCategory">
-      <option value="">Select Category</option>
-    </select>
-    <button onclick="addWebsite()">Add Website</button>
-
-    <div id="categoryList"></div>
-  </div>
-
-  <script>
-    const categories = {
-      "Company Searches": ["https://find-and-update.company-information.service.gov.uk/"],
-      "Court Case Searches": ["https://www.casemine.com/"],
-      "Occupation Registers": [
-        "https://www.gmc-uk.org/registration-and-licensing/the-medical-register",
-        "https://www.gdc-uk.org/pages/searchregisters.aspx",
-        "https://www.nmc.org.uk/registration/search-the-register/",
-        "https://www.hcpc-uk.org/check-the-register/",
-        "https://www.lawscot.org.uk/members/membership-and-registrations/member-directory/",
-        "https://solicitors.lawsociety.org.uk/",
-        "https://www.sra.org.uk/consumers/register/",
-        "https://www.barstandardsboard.org.uk/",
-        "https://www.architecture.com/education-cpd-and-careers/registers",
-        "https://www.rics.org/uk/find-a-member/",
-        "https://www.arb.org.uk/public-register/",
-        "https://www.psa.org.uk/check-a-practitioner",
-        "https://www.optical.org/en/public-register",
-        "https://www.pharmacyregulation.org/registers",
-        "https://www.nursing-midwifery.register-search.org/",
-        "https://www.socialworkengland.org.uk/"
-      ],
-      "Genealogy": ["https://probatesearch.service.gov.uk/#wills"],
-      "Transport": ["https://cartaxcheck.co.uk/"],
-      "Sanctions, Watchlists, PEPs": ["https://www.insolvencydirect.bis.gov.uk/eiir/search"],
-      "Social Media": ["https://www.facebook.com/"],
-      "Offshore Companies": ["https://offshoreleaks.icij.org/"],
-      "Domain/Leaked/Cached": ["https://who.is/"]
-    };
-
-    function refreshUI() {
-      const listDiv = document.getElementById("categoryList");
-      const dropdown = document.getElementById("websiteCategory");
-
-      listDiv.innerHTML = "";
-      dropdown.innerHTML = '<option value="">Select Category</option>';
-
-      for (const [category, websites] of Object.entries(categories)) {
-        dropdown.innerHTML += `<option value="${category}">${category}</option>`;
-
-        const section = document.createElement("details");
-        section.className = "dropdown-section";
-        section.innerHTML = `<summary>${category} <button class="small-button" onclick="deleteCategory('${category}')">Delete</button></summary>`;
-
-        const ul = document.createElement("ul");
-        websites.forEach((site, idx) => {
-          const li = document.createElement("li");
-          li.className = "site-link";
-          li.innerHTML = `
-            <a href="${site}" target="_blank">${site}</a>
-            <div class="inline-buttons">
-              <button class="small-button" onclick="editWebsite('${category}', ${idx})">Edit</button>
-              <button class="small-button" onclick="deleteWebsite('${category}', ${idx})">Delete</button>
-            </div>`;
-          ul.appendChild(li);
-        });
-
-        section.appendChild(ul);
-        listDiv.appendChild(section);
-      }
-    }
-
-    function addCategory() {
-      const name = document.getElementById("categoryName").value.trim();
-      if (name && !categories[name]) {
-        categories[name] = [];
-        refreshUI();
-        document.getElementById("categoryName").value = "";
-      }
-    }
-
-    function addWebsite() {
-      const url = document.getElementById("websiteName").value.trim();
-      const category = document.getElementById("websiteCategory").value;
-      if (url && category && categories[category]) {
-        categories[category].push(url);
-        refreshUI();
-        document.getElementById("websiteName").value = "";
-      }
-    }
-
-    function deleteWebsite(category, index) {
-      categories[category].splice(index, 1);
-      refreshUI();
-    }
-
-    function editWebsite(category, index) {
-      const newUrl = prompt("Enter new URL:", categories[category][index]);
-      if (newUrl) {
-        categories[category][index] = newUrl;
-        refreshUI();
-      }
-    }
-
-    function deleteCategory(category) {
-      if (confirm(`Are you sure you want to delete the category "${category}"?`)) {
-        delete categories[category];
-        refreshUI();
-      }
-    }
-
-    function search() {
-      const keyword = document.getElementById("keyword").value.trim();
-      if (!keyword) return alert("Please enter a keyword first.");
-
-      let resultWindow = window.open("", "_blank");
-      resultWindow.document.write(`<h2>Search Results for "${keyword}"</h2><ul>`);
-
-      for (const [cat, sites] of Object.entries(categories)) {
-        for (const url of sites) {
-          const searchUrl = `${url}?q=${encodeURIComponent(keyword)}`;
-          resultWindow.document.write(`<li><a href="${searchUrl}" target="_blank">${cat}: ${url}</a></li>`);
-        }
-      }
-
-      resultWindow.document.write("</ul>");
-    }
-
-    refreshUI();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
