--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OSINT Search Tool</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -10,37 +10,23 @@
   <div class="container">
     <h1>OSINT Search Tool</h1>
 
-    <div class="section">
-      <label for="keyword">Enter Keyword:</label>
-      <input type="text" id="keyword" placeholder="e.g. John Smith" />
-    </div>
+    <section id="search-section">
+      <input type="text" id="keyword" placeholder="Enter keyword" />
+      <div id="category-checkboxes"></div>
+      <button id="search-btn" class="btn brand-btn">Search</button>
+    </section>
 
-    <div class="section">
-      <h2>Search Categories</h2>
-      <div id="categoryList" class="category-list"></div>
-    </div>
-
-    <div class="section">
-      <button id="searchBtn" class="brand-button">Search</button>
-    </div>
-
-    <div class="section">
-      <h2>Manage Categories & Websites</h2>
-      <div id="managePanel"></div>
-      <button id="addCategoryBtn" class="brand-button">+ Add Category</button>
-      <button id="addWebsiteBtn" class="brand-button">+ Add Website</button>
-    </div>
-
-    <div class="section">
-      <h2>Upload Image for Reverse Image Search</h2>
-      <input type="file" id="imageUpload" accept="image/*" />
-      <button id="reverseSearchBtn" class="brand-button">Reverse Image Search</button>
-    </div>
-
-    <div class="section">
+    <section id="results-section">
       <h2>Search Results</h2>
       <div id="results"></div>
-    </div>
+    </section>
+
+    <section id="manage-section">
+      <h2>Manage Categories & Websites</h2>
+      <div id="manage-categories"></div>
+      <div id="manage-websites"></div>
+      <button id="save-changes" class="btn brand-btn">Save Changes</button>
+    </section>
   </div>
 
   <script src="script.js"></script>
