--- a/index.html
+++ b/index.html
@@ -8,25 +8,73 @@
 </head>
 <body>
   <div class="container">
-    <h1>OSINT Search Tool</h1>
 
-    <section id="search-section">
-      <input type="text" id="keyword" placeholder="Enter keyword" />
-      <div id="category-checkboxes"></div>
-      <button id="search-btn" class="btn brand-btn">Search</button>
+    <header>
+      <h1>OSINT Search Tool</h1>
+    </header>
+
+    <section class="search-section">
+      <input type="text" id="keywordInput" placeholder="Enter keyword(s)" />
+      <button id="searchBtn" class="btn-brand">Search</button>
+
+      <div class="image-search">
+        <label for="imageUpload" class="btn-brand" style="cursor:pointer;">Upload Image for Reverse Search</label>
+        <input type="file" id="imageUpload" accept="image/*" style="display:none" />
+      </div>
+
+      <div id="imageSearchEngines" class="image-engines" style="display:none;">
+        <p>Reverse image search on:</p>
+        <button data-engine="google" class="btn-brand engine-btn">Google</button>
+        <button data-engine="bing" class="btn-brand engine-btn">Bing</button>
+        <button data-engine="yandex" class="btn-brand engine-btn">Yandex</button>
+        <button data-engine="tineye" class="btn-brand engine-btn">TinEye</button>
+      </div>
     </section>
 
-    <section id="results-section">
-      <h2>Search Results</h2>
-      <div id="results"></div>
+    <section class="categories-section">
+      <h2>Categories</h2>
+      <div id="categoriesContainer"></div>
     </section>
 
-    <section id="manage-section">
+    <section class="manage-section">
       <h2>Manage Categories & Websites</h2>
-      <div id="manage-categories"></div>
-      <div id="manage-websites"></div>
-      <button id="save-changes" class="btn brand-btn">Save Changes</button>
+
+      <div class="manage-categories">
+        <h3>Categories</h3>
+        <div id="manageCategoriesContainer"></div>
+        <input type="text" id="newCategoryInput" placeholder="New category name" />
+        <button id="addCategoryBtn" class="btn-brand">Add Category</button>
+      </div>
+
+      <div class="manage-websites">
+        <h3>Websites</h3>
+        <select id="categorySelectForWebsites"></select>
+        <input type="text" id="newWebsiteName" placeholder="Website name" />
+        <input type="url" id="newWebsiteURL" placeholder="Website URL" />
+        <button id="addWebsiteBtn" class="btn-brand">Add Website</button>
+      </div>
     </section>
+
+    <section class="advanced-filters">
+      <h2>Advanced Filters</h2>
+      <p>For demonstration, filters for LinkedIn:</p>
+      <label>Location: <input type="text" id="linkedinLocation" placeholder="e.g. London" /></label>
+      <label>Job Title: <input type="text" id="linkedinJobTitle" placeholder="e.g. Investigator" /></label>
+    </section>
+
+    <section class="results-section">
+      <h2>Search Results</h2>
+      <div id="resultsContainer"></div>
+      <button id="exportReportBtn" class="btn-brand">Export Report</button>
+    </section>
+
+    <section class="saved-cases-section">
+      <h2>Saved Cases</h2>
+      <input type="text" id="searchSavedCases" placeholder="Search saved cases..." />
+      <div id="savedCasesContainer"></div>
+      <button id="clearSavedCasesBtn" class="btn-brand" style="background:#555;">Clear All Saved Cases</button>
+    </section>
+
   </div>
 
   <script src="script.js"></script>
