--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             --bg-tertiary: #252525;
             --text-primary: #252525;
             --text-secondary: #b0b0b0;
-            --accent: #00d4ff;
-            --success: #00ff88;
-            --error: #ff4757;
-            --warning: #ffa502;
+            --accent: #082248;
+            --success: #082248;
+            --error: #0822487;
+            --warning: #082248;
         }
 
         body {
