--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --brand-hover: #8a2e11;
             --brand-light: #f0e6e1;
             --bg-primary: #ffffff;
-            --bg-secondary: #ffffff;
+            --bg-secondary: #B13F17;
             --bg-tertiary: #252525;
             --text-primary: #252525;
             --text-secondary: #b0b0b0;
