--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --brand-hover: #8a2e11;
             --brand-light: #f0e6e1;
             --bg-primary: #ffffff;
-            --bg-secondary: #B13F17;
+            --bg-secondary: #ffffff;
             --bg-tertiary: #252525;
             --text-primary: #252525;
             --text-secondary: #b0b0b0;
@@ -77,11 +77,6 @@
             margin-bottom: 10px;
             text-shadow: 0 0 30px rgba(177, 63, 23, 0.3);
             animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from { filter: drop-shadow(0 0 10px rgba(177, 63, 23, 0.3)); }
-            to { filter: drop-shadow(0 0 20px rgba(177, 63, 23, 0.6)); }
         }
 
         .header p {
