--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             --text-secondary: #b0b0b0;
             --accent: #082248;
             --success: #082248;
-            --error: #0822487;
+            --error: #082248;
             --warning: #082248;
         }
 
